ensured text remains visible during webfont load

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1151,7 +1151,6 @@ img {
   }
 }
 
-
 /*==================== Typing ====================*/
 
 @keyframes typing {
@@ -1181,4 +1180,16 @@ img {
   border-right: 3px solid var(--title-color);
   animation: typing 2s steps(var(--typing-steps)),
     blinking 0.7s steps(1) infinite;
+}
+
+/*==================== Font ====================*/
+
+@font-face {
+  font-family: "Pacifico";
+  font-style: normal;
+  font-weight: 400;
+  src: local("Pacifico Regular"), local("Pacifico-Regular"),
+    url(https://fonts.gstatic.com/s/pacifico/v12/FwZY7-Qmy14u9lezJ-6H6MmBp0u-.woff2)
+      format("woff2");
+  font-display: swap;
 }
